src/objects/Flights__c.object
<CustomObject>
    <fields>
        <fullName>Adults__c</fullName>
        <label>Adults</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Childrens__c</fullName>
        <label>Childrens</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Departing__c</fullName>
        <label>Departing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <picklist>
            <picklistValues>
                <fullName>Los Angeles</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_way__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One way</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <label>Return</label>
        <picklist>
            <picklistValues>
                <fullName>Los Angeles</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakeville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Returning__c</fullName>
        <label>Returning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Two_Way__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Two Way</label>
        <type>Checkbox</type>
    </fields>
    <label>Flight</label>
    <nameField>
        <label>Flights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <recordTypes>
        <fullName>California_User</fullName>
        <active>true</active>
        <description>Displays Cities Available in California only.</description>
        <label>California User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minneapolis_User</fullName>
        <active>false</active>
        <description>Displays Cities Available in Minneapolis only.</description>
        <label>Minneapolis User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>